data/derived/comb/progs/unify/prog1110.ml.out
Characters 45-57:
  let fixpoint (f,b) = wwhile(let g x = f x in (x, x < 100), b);;
                                               ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
